--- a/src/test/javascript/SpecRunner.html
+++ b/src/test/javascript/SpecRunner.html
@@ -60,6 +60,7 @@
 <script src="../../main/webapp/public/js/shared/controller/forgot-password-controller.js"></script>
 <script src="../../main/webapp/public/js/shared/controller/header-controller.js"></script>
 <script src="../../main/webapp/public/js/auth/login-controller.js"></script>
+<script src="../../main/webapp/public/js/auth/authURL-factory.js"></script>
 <script src="../../main/webapp/public/js/shared/controller/locale-controller.js"></script>
 <script src="../../main/webapp/public/js/shared/controller/facility-search-filter-controller.js"></script>
 <script src="../../main/webapp/public/js/shared/controller/facility-sub-filters-controller.js"></script>
@@ -215,6 +216,7 @@
 <script src="specs/shared/controller/multiple-facility-search-filter-controller-test.js"></script>
 <script src="specs/shared/controller/reset-password-controller-test.js"></script>
 <script src="specs/auth/login-controller-test.js"></script>
+<script src="specs/auth/authURL-factory-test.js"></script>
 <script src="specs/shared/util-test.js"></script>
 <script src="specs/shared/app-test.js"></script>
 <script src="specs/upload/controller/upload-controller-test.js"></script>
