OLMIS-1040: Added auth files to login.html page

--- a/src/main/webapp/public/pages/login.html
+++ b/src/main/webapp/public/pages/login.html
@@ -40,6 +40,8 @@
   <script type="text/javascript" src="/public/js/shared/services/services.js"></script>
   <script type="text/javascript" src="/public/js/shared/services/message-service.js"></script>
 
+  <script type="text/javascript" src="/public/js/auth/authURL-factory.js"></script>
+  <script type="text/javascript" src="/public/js/auth/auth-service.js"></script>
   <script type="text/javascript" src="/public/js/auth/login-controller.js"></script>
   
   <script type="text/javascript" src="/public/js/shared/controller/locale-controller.js"></script>
