OLMIS-1040: Updated html pages

--- a/src/main/webapp/public/pages/login.html
+++ b/src/main/webapp/public/pages/login.html
@@ -42,6 +42,7 @@
 
   <script type="text/javascript" src="/public/js/auth/authURL-factory.js"></script>
   <script type="text/javascript" src="/public/js/auth/auth-service.js"></script>
+  <script type="text/javascript" src="/public/js/auth/auth-interceptor.js"></script>
   <script type="text/javascript" src="/public/js/auth/login-controller.js"></script>
   
   <script type="text/javascript" src="/public/js/shared/controller/locale-controller.js"></script>
