--- a/src/main/webapp/public/pages/index.html
+++ b/src/main/webapp/public/pages/index.html
@@ -14,41 +14,15 @@
   <meta charset="utf-8">
   <title openlmis-message="app.title"></title>
   <link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
-  <script src="/public/lib/jquery/jquery-2.0.0.min.js"></script>
-  <script src="/public/lib/angular/angular.min.js"></script>
-  <script src="/public/lib/angular/angular-route.min.js"></script>
-  <script src="/public/lib/angular/angular-cookies.min.js"></script>
-  <script src="/public/lib/angular/angular-resource.min.js"></script>
-  <script src="/public/lib/bootstrap/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/public/lib/bootstrap/css/bootstrap.min.css">
-  <script src="/public/lib/angular-ui/angular-ui.min.js"></script>
   <link rel="stylesheet" href="/public/lib/angular-ui/angular-ui.min.css">
-  <script src="/public/lib/underscore/underscore-min.js"></script>
-
-  <script src="/public/js/shared/app.js"></script>
-  <!-- App directives -->
-  <script src="/public/js/shared/directives/form-toolbar.js"></script>
-  <script src="/public/js/shared/directives/openlmis-message.js"></script>
-  <script src="/public/js/shared/directives/openlmis-pagination.js"></script>
-  <script src="/public/js/shared/directives/placeholder.js"></script>
-  <script src="/public/js/shared/directives/ui-nav.js"></script>
-  <script src="/public/js/shared/directives/tab-scroll.js"></script>
-
   <link rel="stylesheet" href="/public/css/app.css">
-  <script src="/public/js/shared/services/services.js"></script>
-  <script src="/public/js/shared/controller/locale-controller.js"></script>
-  <script type="text/javascript" src="/public/js/shared/services/message-service.js"></script>
-  <script type="text/javascript" src="/public/js/shared/services/authorization-service.js"></script>
-  <script src="/public/js/shared/controller/login-controller.js"></script>
-  <script src="/public/js/shared/controller/locale-controller.js"></script>
-  <script src="/public/js/shared/controller/header-controller.js"></script>
-  <script src="/public/js/shared/controller/navigation-controller.js"></script>
-  <script src="/public/lib/localstorage/localStorage.js"></script>
-  <script src="/public/js/shared/localStorageKeys.js"></script>
-
   <!--[if IE 9]>
   <link rel="stylesheet" href="/public/css/ie9.css"/>
   <![endif]-->
+
+  <script type="text/javascript" src="/public/vendor.js"></script>
+  <script type="text/javascript" src="/public/openlmis.js"></script>
 
 </head>
 <!-- TODO: onunload clears cache for safari. It is a hack. Find better alternative -->
