--- a/src/main/webapp/public/pages/index.html
+++ b/src/main/webapp/public/pages/index.html
@@ -14,8 +14,7 @@
   <meta charset="utf-8">
   <title openlmis-message="app.title"></title>
   <link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/public/lib/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/public/lib/angular-ui/angular-ui.min.css">
+  <link rel="stylesheet" href="/public/css/vendor.css">
   <link rel="stylesheet" href="/public/css/app.css">
   <!--[if IE 9]>
   <link rel="stylesheet" href="/public/css/ie9.css"/>
