--- a/src/main/webapp/public/pages/login.html
+++ b/src/main/webapp/public/pages/login.html
@@ -15,9 +15,8 @@
   <meta content="utf-8" http-equiv="encoding">
   <title openlmis-message="app.title"></title>
   <link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/public/lib/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/public/lib/angular-ui/angular-ui.min.css">
-  <link rel="stylesheet" href="/public/css/login.css">
+  <link rel="stylesheet" href="/public/css/vendor.css">
+  <link rel="stylesheet" href="/public/css/app.css">
   <!--[if IE 9]>
   <link rel="stylesheet" href="/public/css/ie9.css"/>
   <![endif]-->
