--- a/src/main/webapp/public/pages/logistics/rnr/index.html
+++ b/src/main/webapp/public/pages/logistics/rnr/index.html
@@ -14,13 +14,8 @@
     <meta charset="utf-8">
     <title openlmis-message="app.title"></title>
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="/public/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/lib/select2/select2.css">
-    <link rel="stylesheet" href="/public/lib/angular-ui/angular-ui.min.css">
-    <link type="text/css" rel="stylesheet" charset="UTF-8" href="/public/css/ng-grid.css"/>
+    <link type="text/css" rel="stylesheet" charset="UTF-8" href="/public/css/vendor.css"/>
     <link type="text/css" rel="stylesheet" charset="UTF-8" href="/public/css/app.css"/>
-    <link rel="stylesheet" href="/public/css/rnr-mmia-view.css"/>
-    <link rel="stylesheet" href="/public/css/rnr-view.css">
     <!--[if IE 9]>
     <link rel="stylesheet" href="/public/css/ie9.css"/>
     <![endif]-->
