--- a/src/main/webapp/public/navigation/navigation.html
+++ b/src/main/webapp/public/navigation/navigation.html
@@ -10,7 +10,7 @@
 
 <div class="navigation toggleFullScreen" ng-controller="NavigationController" ui-nav>
   <ul class="clearfix" style="display:none">
-    <li><a id='homeMenu' href="/" openlmis-message="link.home"></a></li>
+    <li><a id='homeMenu' ui-sref="app.home" openlmis-message="link.home"></a></li>
 
     <li>
       <a id="requisitions-menu" href="javascript: void(0)" openlmis-message="link.requisitions"></a>
