OLMIS-1043: Migrated approve requisition list to the new UI

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -28,6 +28,6 @@
 <body class="home-background" onunload="">
   <div ui-view="header"></div>
   <div ui-view="navigation"></div>
-  <div class="home-content" ui-view></div>
+  <div ui-view></div>
 </body>
 </html>
