--- a/src/main/webapp/public/home.html
+++ b/src/main/webapp/public/home.html
@@ -1,5 +1,7 @@
-  <h2 class="innershadow welcome-message" openlmis-message="welcome.to.message"></h2>
+<div class="home-content">
+	<h2 class="innershadow welcome-message" openlmis-message="welcome.to.message"></h2>
 
-  <h3 class="innershadow welcome-message" openlmis-message="label.logistics.management"></h3>
+	<h3 class="innershadow welcome-message" openlmis-message="label.logistics.management"></h3>
 
-  <h3 class="innershadow welcome-message" openlmis-message="label.information.systems"></h3>
+	<h3 class="innershadow welcome-message" openlmis-message="label.information.systems"></h3>
+</div>
