--- a/src/main/webapp/public/modules/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/modules/requisitions/approval-list/approval-list.html
@@ -1,17 +1,3 @@
-<!--
-  ~ This program is part of the OpenLMIS logistics management information system platform software.
-  ~ Copyright © 2013 VillageReach
-  ~
-  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-  ~  
-  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
-  ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
-  -->
-
-<h2 openlmis-message="label.approve.requisitions"></h2>
-
-<div class="alert alert-success" id="saveSuccessMsgDiv" ng-show="message" ng-bind="$parent.message"></div>
-
 <div class="app-form">
     <div class="form-group">
         <h3 id='requisitionListLabel' openlmis-message="label.requisition.list"></h3>
@@ -33,8 +19,7 @@
                     </select>
                 </div>
             </div>
-            <div id="approveReqList" class="gridStyle" ng-grid="gridOptions" ng-show="requisitions.length"></div>
+            <div id="approveReqList" class="gridStyle" ui-grid="gridOptions" ng-show="requisitions.length"></div>
         </div>
     </div>
 </div>
-
