--- a/src/main/webapp/public/navigation/navigation.html
+++ b/src/main/webapp/public/navigation/navigation.html
@@ -22,8 +22,7 @@
                openlmis-message="link.requisitions.create.authorize"></a>
           </li>
           <li ng-show="hasPermission('APPROVE_REQUISITION')">
-            <a id="approveRnr" href="/public/pages/logistics/rnr/index.html#/rnr-for-approval"
-               openlmis-message="link.requisition.approve"></a>
+            <a id="approveRnr" ui-sref="app.requisitions.approvalList" openlmis-message="link.requisition.approve"></a>
           </li>
           <li ng-show="hasPermission('CONVERT_TO_ORDER')">
             <a id="convertToOrderRnr"
