OLMIS-1043: Renamed requisition related states

--- a/src/main/webapp/public/dashboard/navigation.html
+++ b/src/main/webapp/public/dashboard/navigation.html
@@ -22,7 +22,7 @@
                openlmis-message="link.requisitions.create.authorize"></a>
           </li>
           <li ng-show="hasPermission('APPROVE_REQUISITION')">
-            <a id="approveRnr" ui-sref="app.requisitions.approvalList" openlmis-message="link.requisition.approve"></a>
+            <a id="approveRnr" ui-sref="requisitions.approvalList" openlmis-message="link.requisition.approve"></a>
           </li>
           <li ng-show="hasPermission('CONVERT_TO_ORDER')">
             <a id="convertToOrderRnr"
