OLMIS-1004: migrate init rnr page for my facility

--- a/src/main/webapp/public/dashboard/navigation.html
+++ b/src/main/webapp/public/dashboard/navigation.html
@@ -18,7 +18,7 @@
       <div class="submenu">
         <ul>
           <li ng-show="hasPermission('CREATE_REQUISITION') || hasPermission('AUTHORIZE_REQUISITION')">
-            <a id="createRnr" href="/public/pages/logistics/rnr/index.html#/init-rnr"
+            <a id="createRnr" ui-sref="requisitions.initRnr"
                openlmis-message="link.requisitions.create.authorize"></a>
           </li>
           <li ng-show="hasPermission('APPROVE_REQUISITION')">
