--- a/src/main/webapp/public/requisitions/view-requisition/header.html
+++ b/src/main/webapp/public/requisitions/view-requisition/header.html
@@ -9,8 +9,8 @@
   -->
 
 <div id="requisition-header" class="toggleFullScreen">
-  <h2><span id='requisitionHeaderLabel' openlmis-message="label.requisition"></span>&nbsp;<span
-          ng-bind="rnr.program.name + ' (' + rnr.facility.facilityType.name + ')'"></span>
+  <h2><span id='requisitionHeaderLabel' openlmis-message="label.requisition" ng-style="visibility"></span>&nbsp;<span
+          ng-bind="rnr.program.name + ' (' + rnr.facility.type.name + ')'"></span>
   </h2>
   <div class="info-box padding2px">
     <div class="pull-left">
@@ -31,12 +31,12 @@
         </div>
         <div class="span3">
           <strong id='maximumStockLabel' openlmis-message="label.facility.maximumStock"> </strong>:&nbsp;<span
-          id='maximumStock' ng-bind="rnr.facility.facilityType.nominalMaxMonth"></span>
+          id='maximumStock' ng-bind="rnr.facility.type.nominalMaxMonth"></span>
         </div>
         <div class="span3">
           <strong id='emergencyOrderLabel' openlmis-message="label.emergency.order.point"></strong>:
           &nbsp;<span
-          id='emergencyOrderPoint' ng-bind="rnr.facility.facilityType.nominalEop"></span>
+          id='emergencyOrderPoint' ng-bind="rnr.facility.type.nominalEop"></span>
         </div>
       </div>
       <div class="row-fluid">
