OLMIS-1051 after review fix

--- a/src/main/webapp/public/requisitions/header.html
+++ b/src/main/webapp/public/requisitions/header.html
@@ -9,7 +9,7 @@
   -->
 
 <div id="requisition-header" class="toggleFullScreen">
-  <h2><span id='requisitionHeaderLabel' openlmis-message="label.requisition" ng-style="visibility"></span>&nbsp;<span
+  <h2><span id='requisitionHeaderLabel' openlmis-message="label.requisition"></span>&nbsp;<span
           ng-bind="rnr.program.name + ' (' + rnr.facility.type.name + ')'"></span>
   </h2>
   <div class="info-box padding2px">
