--- a/src/main/webapp/public/requisitions/requisition.html
+++ b/src/main/webapp/public/requisitions/requisition.html
@@ -8,4 +8,4 @@
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 
-<ng-include src="'requisitions/view-requisition/header.html'"></ng-include>
+<ng-include src="'requisitions/header.html'"></ng-include>
