OLMIS-1004: fix resource poperties names

--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -129,7 +129,7 @@
       <div class="row-fluid init-rnr-grid" ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)">
         <div class="span6">
           <div class="gridStyle small" ui-grid="periodGridOptions"
-               ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)"></div>
+               ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)" id="periodGrid"></div>
         </div>
       </div>
       <div class="row-fluid" ng-show="error">
