--- a/src/main/webapp/public/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.html
@@ -13,9 +13,9 @@
                     <span openlmis-message="label.in"></span>
                     <select ng-model="searchField" ng-change="filterRequisitions()">
                         <option value="" openlmis-message="option.value.all"></option>
-                        <option value="programName" openlmis-message="option.value.program"></option>
-                        <option value="facilityCode" openlmis-message="option.value.facility.code"></option>
-                        <option value="facilityName" openlmis-message="option.value.facility.name"></option>
+                        <option value="program.name" openlmis-message="option.value.program"></option>
+                        <option value="facility.code" openlmis-message="option.value.facility.code"></option>
+                        <option value="facility.name" openlmis-message="option.value.facility.name"></option>
                     </select>
                 </div>
             </div>
