OLMIS-1033: NavigationService that generates from routes
Instead of hardcoding navigation items, a service and directive are
created to read ui-router configuration. THe navigation bar was updated
to follow Bootstrap's navigation styles

--- a/src/main/webapp/public/auth/login-form.html
+++ b/src/main/webapp/public/auth/login-form.html
@@ -11,7 +11,7 @@
   <div class="login-container">
       <div class="modal-login-header">
           <h1 openlmis-message="label.app.header"></h1>
-          <ng-include src="'/public/pages/locale-list.html'"/>
+          <openlmis-locale class="locale-container" />
       </div>
 
       <div class="login-form" ng-controller="LoginController">
