OLMIS-1103: Reworked product grid to use ui-grid

--- a/src/main/webapp/public/requisitions/product-grid/product-grid.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid.html
@@ -1,55 +1,1 @@
-<div id="viewRnr" class="rnr-table" adjust-height>
-    <div class="float-left left-table">
-        <table class="table table-bordered" fixed-table-header>
-            <thead>
-                <tr>
-                    <th class="col-{{name}}" ng-repeat="(name, column) in fixedColumns" ng-bind="column.label"></th>
-                </tr>
-            </thead>
-            <tbody ng-repeat="product in products">
-                <tr>
-                    <td id="category_{{$index}}" class="productCategory"
-                        colspan="{{fixedColumns.length}}"
-                        ng-show="showCategory($index)"
-                        ng-bind="product.orderableProduct.productCategory"></td>
-                </tr>
-                <tr>
-                    <td class="cell-input col-{{ name }}" ng-repeat="(name, column) in fixedColumns">
-                        <span ng-bind="product.orderableProduct[name]" id="{{name + '_' + $parent.$index}}" class="cell-text"></span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="float-left right-table" custom-horizontal-scroll>
-        <table id="nonFullSupplyTable" fixed-table-header class="table table-bordered scrollable">
-            <thead>
-                <tr>
-                    <th class="col-{{name}}" ng-repeat="(name, column) in columns" ng-bind="column.label"></th>
-                </tr>
-            </thead>
-            <tbody ng-repeat="product in products">
-                <tr>
-                    <td class="productCategory" colspan="{{visibleColumns.fullSupply.scrollable.length}}"
-                        ng-show="showCategory($index)"></td>
-                </tr>
-                <tr>
-                    <td class="cell-input col-{{ name }}" ng-repeat="(name, column) in columns">
-                        <span ng-switch on="name">
-                            <span ng-switch-when="price">
-                                <span ng-bind='product[name] | currency:currency' id="{{getId(name, $parent)}}" class="cell-text"></span>
-                            </span>
-                            <span ng-switch-when="cost">
-                                <span ng-bind='product[name] | currency:currency' id="{{getId(name, $parent)}}" class="cell-text"></span>
-                            </span>
-                            <span ng-switch-default>
-                                <span ng-bind="product[name]" id="{{getId(name, $parent)}}" class="cell-text"></span>
-                            </span>
-                        </span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="clear-both"></div>
-</div>
+<div ui-grid="options" ui-grid-pinning ui-grid-grouping></div>
