--- a/src/main/webapp/public/requisitions/requisition.html
+++ b/src/main/webapp/public/requisitions/requisition.html
@@ -10,5 +10,8 @@
 <div class="app-form">
 	<ng-include src="'requisitions/header.html'"></ng-include>
 
-	<product-grid columns="columns" products="rnr.requsitionLineItems"></product-grid>
+  <div ng-hide="columns" class="alert alert-info" role="alert" openlmis-message="requisitionType"></div>
+  <div ng-if="columns">
+    <product-grid columns="columns" products="rnr.requsitionLineItems"></product-grid>  
+  </div>
 </div>
