--- a/src/main/webapp/public/requisitions/requisition.html
+++ b/src/main/webapp/public/requisitions/requisition.html
@@ -12,6 +12,6 @@
 
   <div ng-hide="columns" class="alert alert-info" role="alert" openlmis-message="error.rnr.template.not.defined"></div>
   <div ng-if="columns">
-    <product-grid columns="columns" products="rnr.requsitionLineItems"></product-grid>  
+    <product-grid columns="columns" products="rnr.requisitionLineItems"></product-grid>  
   </div>
 </div>
