--- a/src/main/webapp/public/requisitions/product-grid/product-grid.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid.html
@@ -1,1 +1,2 @@
-<div ui-grid="options" ui-grid-pinning></div>
+<div ng-hide="columns" class="alert alert-info" role="alert" openlmis-message="error.rnr.template.not.defined"></div>
+<div ng-if="columns" ui-grid="options" ui-grid-pinning></div>
