--- a/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
+++ b/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
@@ -1,1 +1,1 @@
-<input type="{{determineType()}}" ng-model="ngModel">
+<input type="{{col.columnDefinition.columnType === 'NUMERIC' ? 'number' : 'text'}}" ng-model="ngModel[col.columnDefinition.name]">
