--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -23,6 +23,6 @@
     <div ng-include="'dashboard/header.html'" ></div>
     <div ng-include="'dashboard/navigation.html'" ></div>
   </header>
-  <div ui-view></div>
+  <div class="page-content" ui-view></div>
 </body>
 </html>
