--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -8,8 +8,8 @@
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
 
-<div class="app-form">
-  <div class="form-group">
+<div class="content">
+  <div class="app-form">
     <div class="init-rnr">
       <h2 openlmis-message="label.initiate.requisition"></h2>
 
