OLMIS-1149 Add border around UI pages
Got rid of unnecessary CSS classes and adjusted page class.
Also moved it to SASS.

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -23,6 +23,6 @@
     <div ng-include="'dashboard/header.html'" ></div>
     <div ng-include="'dashboard/navigation.html'" ></div>
   </header>
-  <div class="page-content" ui-view></div>
+  <div ui-view></div>
 </body>
 </html>
