--- a/src/main/webapp/public/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.html
@@ -1,4 +1,4 @@
-<div class="app-form">
+<div class="page">
     <h2 openlmis-message="label.approve.requisitions"></h2>
     <div class="alert alert-success" id="saveSuccessMsgDiv" ng-show="message"
          ng-bind="$parent.message">
