OLMIS-1163: Button consistency
All button padding set as
Set default button's color as gray.
Implement colors as variables.
Set  for primary buttons.

--- a/src/main/webapp/public/requisitions/init-rnr-button.html
+++ b/src/main/webapp/public/requisitions/init-rnr-button.html
@@ -1,3 +1,3 @@
-<input type="button" ng-click="grid.appScope.initRnr(row.entity)"
-       openlmis-message="button.proceed" class="btn btn-primary btn-small grid-btn"
+<input id="proceedButton" type="button" ng-click="grid.appScope.initRnr(row.entity)"
+       openlmis-message="button.proceed" class="btn btn-primary grid-btn"
        ng-show="{{row.entity.activeForRnr}}"/>
