--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -82,7 +82,8 @@
             </select>
         </div>
 
-        <div class="row-fluid init-rnr-grid" ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)">
+        <div id="viewReqList" class="row-fluid init-rnr-grid"
+              ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)">
             <div class="span6">
                 <div class="gridStyle small" ui-grid="periodGridOptions"
                      ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)" id="periodGrid"></div>
