--- a/src/main/webapp/public/dashboard/header.html
+++ b/src/main/webapp/public/dashboard/header.html
@@ -13,7 +13,7 @@
     <div class="header row-fluid">
 
       <div class="span9">
-        <div class="logo clearfix">
+        <div class="logo">
           <img src="/public/images/logo.png"/>
 
           <h1 openlmis-message="label.app.header"></h1>
