OLMIS-818: Rebuild the product-grid to be a separate component using ng-model

--- a/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
+++ b/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
@@ -1,1 +1,1 @@
-<input type="{{col.columnDefinition.columnType === 'NUMERIC' ? 'number' : 'text'}}" ng-model="ngModel[col.columnDefinition.name]">
+<input type="{{col.colDef.cellType === 'NUMERIC' ? 'number' : 'text'}}" ng-model="row.entity[col.name]">
