--- a/src/main/webapp/public/requisitions/header.html
+++ b/src/main/webapp/public/requisitions/header.html
@@ -9,11 +9,11 @@
   -->
 <div id="requisition-header" class="toggleFullScreen">
   <h2><span id='requisitionHeaderLabel' openlmis-message="label.requisition"></span>&nbsp;<span
-          ng-bind="rnr.program.name + ' (' + rnr.facility.type.name + ')'"></span>
+          ng-bind="requisition.program.name + ' (' + requisition.facility.type.name + ')'"></span>
   </h2>
   <div class="info-box padding2px">
     <div class="pull-left">
-      <div ng-class="{'emergency': rnr.emergency, 'regular': !rnr.emergency}">
+      <div ng-class="{'emergency': requisition.emergency, 'regular': !requisition.emergency}">
         <span openlmis-message="requisitionType"></span>
       </div>
     </div>
@@ -22,27 +22,27 @@
       <div class="row-fluid" id="requisition-head-block">
         <div class="span3">
           <strong id='facilityLabel' openlmis-message="label.facility"> </strong>:&nbsp;<span
-          id='facility' ng-bind="rnr.facility.code + ' - ' + rnr.facility.name"></span>
+          id='facility' ng-bind="requisition.facility.code + ' - ' + requisition.facility.name"></span>
         </div>
         <div class="span3">
           <strong id='operatedByLabel' openlmis-message="label.facility.operatedBy"></strong>: &nbsp;<span
-          id='operatedBy' ng-bind="rnr.facility.operator.name"></span>
+          id='operatedBy' ng-bind="requisition.facility.operator.name"></span>
         </div>
       </div>
       <div class="row-fluid">
         <div class="span3">
           <strong><span id='geographicZoneLabel' openlmis-message="label.region"></span>:
           </strong><span
-          id='geographicZone' ng-bind="rnr.facility.geographicZone.name"></span>
+          id='geographicZone' ng-bind="requisition.facility.geographicZone.name"></span>
         </div>
         <div class="span3">
           <strong><span id='parentLevelLabel' openlmis-message="label.province"></span>:
           </strong><span
-          id='parentLevel' ng-bind="rnr.facility.geographicZone.parent.name"></span>
+          id='parentLevel' ng-bind="requisition.facility.geographicZone.parent.name"></span>
         </div>
         <div class="span6">
           <strong id='reportingPeriodLabel' openlmis-message="label.facility.reportingPeriod"></strong>:&nbsp;<span
-          id='reportingPeriod' ng-bind="rnr.periodDisplayName()"></span>
+          id='reportingPeriod' ng-bind="periodDisplayName()"></span>
         </div>
       </div>
     </div>
