--- a/src/main/webapp/public/requisitions/product-grid/product-grid.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid.html
@@ -1,2 +1,5 @@
-<div ng-hide="columns" class="alert alert-info" role="alert" openlmis-message="error.rnr.template.not.defined"></div>
-<div ng-if="columns" ui-grid="options" ui-grid-pinning></div>
+<div ng-if="templateLoaded">
+	<div ng-hide="options" class="alert alert-info" role="alert" openlmis-message="error.rnr.template.not.defined"></div>
+	<div ng-if="options" ui-grid="options" ui-grid-pinning></div>
+</div>
+
