--- a/src/main/webapp/public/requisitions/requisition-form-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-form-toolbar.html
@@ -6,7 +6,7 @@
         <input id="submitRnrButton" ng-disabled="formDisabled" type="button" ng-click="submitRnr()"
                class="btn btn-primary submit-button"
                openlmis-message="button.submit"
-               ng-show="rnr.status == 'INITIATED' && hasPermission('CREATE_REQUISITION')"/>
+               ng-show="requisition.status == 'INITIATED' && hasPermission('CREATE_REQUISITION')"/>
     </div>
     <div class="toolbar-error" id="saveFailMessage" openlmis-message="error" ng-show="error"></div>
     <div class="toolbar-error" id="submitFailMessage" openlmis-message="submitError"
