--- a/src/main/webapp/public/requisitions/requisition-form-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-form-toolbar.html
@@ -1,12 +1,17 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
-        <input id="saveRnrButton" ng-disabled="formDisabled" type="button" ng-click="saveRnr(null)"
-               class="btn btn-primary save-button"
+        <button id="saveRnrButton" ng-disabled="formDisabled" ng-click="saveRnr(null)"
+               class="btn btn-success save-button"
                openlmis-message="button.save"/>
-        <input id="submitRnrButton" ng-disabled="formDisabled" type="button" ng-click="submitRnr()"
-               class="btn btn-primary submit-button"
+        <button id="submitRnrButton" ng-disabled="formDisabled" ng-click="submitRnr()"
+               class="btn btn-success submit-button"
                openlmis-message="button.submit"
                ng-show="requisition.status == 'INITIATED' && hasPermission('CREATE_REQUISITION')"/>
+        <button id="authorizeRnrButton" 
+              class="btn btn-primary save-button"
+              openlmis-message="button.authorize"
+              ng-show="authorizeEnabled()"
+              ng-click="authorizeRnr()"/>
     </div>
     <div class="toolbar-error" id="saveFailMessage" openlmis-message="error" ng-show="error"></div>
     <div class="toolbar-error" id="submitFailMessage" openlmis-message="submitError"
