OLMIS-818: Added validation to the product-grid

--- a/src/main/webapp/public/requisitions/product-grid/product-grid.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid.html
@@ -1,5 +1,5 @@
 <div ng-if="templateLoaded">
 	<div ng-hide="options" class="alert alert-info" role="alert" openlmis-message="error.rnr.template.not.defined"></div>
-	<div ng-if="options" ui-grid="options" ui-grid-pinning></div>
+	<div class="product-grid" ng-if="options" ui-grid="options" ui-grid-pinning></div>
 </div>
 
