--- a/src/main/webapp/public/requisitions/product-grid/product-grid-cell.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid-cell.html
@@ -1,1 +1,1 @@
-<div class="ui-grid-cell-contents" product-grid-cell></div>
+<div class="ui-grid-cell-contents" product-grid-cell ng-class="{'cell-error': error}"></div>
