--- a/src/main/webapp/public/dashboard/home.html
+++ b/src/main/webapp/public/dashboard/home.html
@@ -1,5 +1,5 @@
 
-<div class="home-content">
+<div class="home-content flex-stretch">
   <h2 class="innershadow welcome-message" openlmis-message="welcome.to.message"></h2>
   <h3 class="innershadow welcome-message" openlmis-message="label.logistics.management"></h3>
   <h3 class="innershadow welcome-message" openlmis-message="label.information.systems"></h3>
