OLMIS-1126: Added Submit button
I added Submit button for submiting requisitions.

--- a/src/main/webapp/public/requisitions/requisition-form-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-form-toolbar.html
@@ -6,12 +6,13 @@
         <input id="submitRnrButton" ng-disabled="formDisabled" ng-click="submitRnr()"
                class="btn btn-primary primary-action"
                openlmis-message="button.submit" type="button"
-               ng-show="requisition.status == 'INITIATED' && hasPermission('CREATE_REQUISITION')"/>
+               ng-show="requisition.status == 'INITIATED'"/>
         <input id="authorizeRnrButton" type="button"
               class="btn btn-primary primary-action"
               openlmis-message="button.authorize"
               ng-show="authorizeEnabled()"
               ng-click="authorizeRnr()"/>
+
     </div>
     <div class="toolbar-error" id="errorMessage" fade-out="3000" openlmis-message="error"
          ng-show="error"></div>
