--- a/src/main/webapp/public/requisitions/product-grid/product-grid-cell-error.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid-cell-error.html
@@ -1,1 +1,1 @@
-<div ng-if="['CALCULATED', 'USER_INPUT'].indexOf(col.colDef.cellSource) > -1" class="cell-error-message">{{getError()}}</div>
+<div class="cell-error-message">{{lineItem.$getPropertyError(column.name)}}</div>
