OLMIS-1128: Add compass image to 404 page

--- a/src/main/webapp/public/dashboard/404.html
+++ b/src/main/webapp/public/dashboard/404.html
@@ -1,4 +1,5 @@
 <div class="home-content flex-stretch">
     <h2 class="innershadow welcome-message" openlmis-message="label.page.not.found"></h2>
     <h3 class="innershadow welcome-message" openlmis-message="error.page.not.found"></h3>
+    <i class="fa fa-compass" aria-hidden="true"></i>
 </div>
