OLMIS-1173 Added truck image to all UI pages

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="/public/openlmis.js"></script>
 
 </head>
-<body>
+<body class="home-background">
   <header ng-if="userIsAuthenticated">
     <div ng-include="'dashboard/header.html'" ></div>
     <div ng-include="'dashboard/navigation.html'" ></div>
