--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -12,7 +12,11 @@
               openlmis-message="button.authorize"
               ng-show="authorizeEnabled()"
               ng-click="authorizeRnr()"/>
-
+        <input id="deleteRnrButton" type="button"
+               class="btn btn-primary primary-action"
+               openlmis-message="button.delete"
+               ng-show="isPossibleToDelete()"
+               ng-click="removeRnr()"/>
     </div>
     <div class="toolbar-error" id="errorMessage" fade-out="3000" openlmis-message="error"
          ng-show="error"></div>
