--- a/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
+++ b/src/main/webapp/public/requisitions/product-grid/user-input-cell.html
@@ -1,1 +1,1 @@
-<input type="{{column.columnDefinition.columnType === 'NUMERIC' ? 'number' : 'text'}}" ng-model="lineItem[column.name]" ng-blur="lineItem.$validateProperty(column.name)">
+<input type="text" ng-model="lineItem[column.name]" ng-blur="lineItem.$validateProperty(column.name)">
