OLMIS-1059: Fixes after review - changed form-tooblar to toolbar and added message to resources

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -1,7 +1,7 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
         <input id="saveRnrButton" ng-disabled="formDisabled" ng-click="saveRnr()"
-               class="btn btn-primary save-button"
+               class="btn save-button"
                openlmis-message="button.save" type="button"/>
         <input id="submitRnrButton" ng-disabled="formDisabled" ng-click="submitRnr()"
                class="btn btn-primary primary-action"
