--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -59,11 +59,8 @@
             <div class="row-fluid">
                 <select placeholder="{{ programOptionMessage() }}"
                         id="programListMyFacility" class="span3"
-                        ng-model="selectedProgram.id" ng-change="loadPeriods()">
-                    <option value=""></option>
-                    <option ng-repeat="program in programs | orderBy: 'name'"
-                            value="{{ program.id }}">{{ program.name }}
-                    </option>
+                        ng-model="selectedProgram" ng-change="loadPeriods()"
+                        ng-options="program.name for program in programs track by program.id">
                 </select>
             </div>
         </div>
@@ -86,7 +83,7 @@
               ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)">
             <div class="span6">
                 <div class="gridStyle small" ui-grid="periodGridOptions"
-                     ng-show="selectedProgram && selectedFacilityId && !(periodGridData.length == 0)" id="periodGrid"></div>
+                     ng-show="selectedProgram && selectedFacilityId && periodGridData && !(periodGridData.length == 0)" id="periodGrid"></div>
             </div>
         </div>
         <div class="row-fluid" ng-show="error">
