--- a/src/main/webapp/public/dashboard/home.html
+++ b/src/main/webapp/public/dashboard/home.html
@@ -1,6 +1,8 @@
 
-<div class="home-content flex-stretch">
-  <h2 class="innershadow welcome-message" openlmis-message="welcome.to.message"></h2>
-  <h3 class="innershadow welcome-message" openlmis-message="label.logistics.management"></h3>
-  <h3 class="innershadow welcome-message" openlmis-message="label.information.systems"></h3>
+<div class="home-page">
+  <h2>
+  	<em openlmis-message="welcome.to.message"></em>
+  	<span openlmis-message="label.logistics.management"></span>
+  	<span openlmis-message="label.information.systems"></span>
+  </h2>
 </div>
