--- a/src/main/webapp/public/dashboard/404.html
+++ b/src/main/webapp/public/dashboard/404.html
@@ -1,5 +1,6 @@
-<div class="home-content flex-stretch">
-    <h2 class="innershadow welcome-message" openlmis-message="label.page.not.found"></h2>
-    <h3 class="innershadow welcome-message" openlmis-message="error.page.not.found"></h3>
-    <i class="fa fa-compass" aria-hidden="true"></i>
+<div class="not-found-page">
+    <h2>
+    	<em openlmis-message="label.page.not.found"></em>
+    	<span openlmis-message="error.page.not.found"></span>
+    </h2>
 </div>
