--- a/src/main/webapp/public/requisitions/product-grid/product-grid.html
+++ b/src/main/webapp/public/requisitions/product-grid/product-grid.html
@@ -7,7 +7,7 @@
         <th class="col-{{column.name}}" ng-repeat="column in columns | orderBy : 'displayOrder'">{{column.label}}</th>
       </tr>
     </thead>
-    <tbody ng-repeat="lineItem in ngModel.requisitionLineItems" product-grid-row>
+    <tbody ng-repeat="lineItem in (sortedLineItems = (ngModel.requisitionLineItems | orderBy: ['orderableProduct.programs[0].productCategoryDisplayName', 'orderableProduct.name']))" product-grid-row>
     </tbody>
   </table>
 </div>
