--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -13,10 +13,20 @@
                openlmis-message="button.submit" type="button"
                ng-show="isPossibleToSubmit()"/>
         <input id="authorizeRnrButton" type="button"
+              class="btn btn-primary primary-action"
+              openlmis-message="button.authorize"
+              ng-show="authorizeEnabled()"
+              ng-click="authorizeRnr()"/>
+        <input id="approveRnrButton" type="button"
                class="btn btn-primary primary-action"
-               openlmis-message="button.authorize"
-               ng-show="authorizeEnabled()"
-               ng-click="authorizeRnr()"/>
+               openlmis-message="button.approve"
+               ng-show="approveAndRejectEnabled()"
+               ng-click="approveRnr()"/>
+        <input id="rejectRnrButton" type="button"
+               class="btn btn-primary primary-action"
+               openlmis-message="button.rnr.reject"
+               ng-show="approveAndRejectEnabled()"
+               ng-click="rejectRnr()"/>
 
     </div>
     <div class="toolbar-error" id="errorMessage" fade-out="3000" openlmis-message="error"
