--- a/src/main/webapp/public/requisitions/approval-list/approval-list.html
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.html
@@ -20,6 +20,6 @@
                 </select>
             </div>
         </div>
-        <div id="approveReqList" class="gridStyle" ui-grid="gridOptions" ng-show="requisitions.length"></div>
+        <div id="approveReqList" class="grid grid-approval-list" ui-grid="gridOptions" ng-show="requisitions.length"></div>
     </div>
 </div>
