FEOLMIS-367: Fixed issue with delete button

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -3,7 +3,7 @@
         <input id="deleteRnrButton" type="button"
                class="btn btn-danger delete-button"
                openlmis-message="button.delete"
-               ng-if="displayApproveAndReject()"
+               ng-if="displayDelete()"
                ng-click="removeRnr()"/>
         <input id="saveRnrButton" ng-disabled="formDisabled" ng-click="saveRnr()"
                class="btn btn-default save-button"
