OLMIS-1058: Simplified delete button color

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -1,7 +1,7 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
         <input id="deleteRnrButton" type="button"
-               class="btn btn-danger delete-button"
+               class="btn delete-button"
                openlmis-message="button.delete"
                ng-if="displayDelete()"
                ng-click="removeRnr()"/>
