--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -23,7 +23,7 @@
                ng-if="displayApproveAndReject()"
                ng-click="approveRnr()"/>
         <input id="rejectRnrButton" type="button"
-               class="btn btn-primary primary-action"
+               class="btn delete-button primary-action"
                openlmis-message="button.rnr.reject"
                ng-if="displayApproveAndReject()"
                ng-click="rejectRnr()"/>
