OLMIS-1167 Standardize select form element

--- a/src/main/webapp/public/common/select.html
+++ b/src/main/webapp/public/common/select.html
@@ -1,10 +1,9 @@
 <div>
-    <ui-select theme="select2" ng-model="selected.item" search-enabled="searchEnabled"
-               on-select="selectedChanged()">
-        <ui-select-match ng-model="selected.item" placeholder="{{placeholder}}">
+    <ui-select theme="select2" ng-model="selected.item" search-enabled="searchEnabled">
+        <ui-select-match ng-model="selected.item" placeholder="{{placeholder}}" >
             {{$select.selected[fieldDisplayed]}}</ui-select-match>
         <ui-select-choices repeat="item in items | orderBy:'{{orderBy}}' track by item[trackBy]">
-            <span ng-bind-html="item[fieldDisplayed]"></span>
+            {{item[fieldDisplayed]}}
         </ui-select-choices>
     </ui-select>
 </div>
