--- a/src/main/webapp/public/requisitions/product-grid/losses-and-adjustments.html
+++ b/src/main/webapp/public/requisitions/product-grid/losses-and-adjustments.html
@@ -11,6 +11,11 @@
                             <select style="width: 350px;" ng-model="adjustment.reason"
                                     ng-options="r as r.name for r in stockAdjustmentReasons">
                             </select>
+                            <openlmis-select ng-model="adjustment.reason"
+                                items="stockAdjustmentReasons"
+                                display-field="name"
+                                track-by="name"
+                                ></openlmis-select>
                         </div>
                         <div class="col-md-3">
                             <input type="number" min="0" openlmis-message="placeholder.quantity" ng-model="adjustment.quantity" class="form-input" required />
