OLMIS-1169: Fixed login screen

--- a/src/main/webapp/public/auth/login-form.html
+++ b/src/main/webapp/public/auth/login-form.html
@@ -25,7 +25,7 @@
                   </div>
                   <div class="login-form-row">
                       <label for="login-password" openlmis-message="label.password"></label>
-                      <input ng-model="password" type="login-password" id="password" required/>
+                      <input ng-model="password" type="password" id="login-password" required/>
                   </div>
                   <div id="loginError" class="alert alert-error" ng-bind="loginError" ng-show="loginError"></div>
                   <div class="login-form-row">
